更新一维前缀和模板, 增加二维前缀和模板

--- a/test/basic/CMakeLists.txt
+++ b/test/basic/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.14)
 project(test_basic)
 enable_testing()
-
+set(CMAKE_BUILD_TYPE Debug)
 add_executable(
   test_prefix_sum
   test_prefix_sum.cpp
