增加求单峰单谷函数极值点的模板

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.14)
 project(basic)
 
-add_library(common STATIC compare.cpp)
+add_library(common STATIC compare.cpp single_max_min_function.cpp)
 target_include_directories(common PUBLIC ${CMAKE_SOURCE_DIR}/include)
